--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,28 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:denky32]
-platform = espressif32
-board = denky32
+
+; [env:denky32]
+; platform = espressif32
+; board = denky32
+; framework = arduino
+
+; upload_port = COM7        ; замени на свой порт (Linux: /dev/ttyUSB0 или /dev/ttyACM0)
+; monitor_port = COM7       ; тот же порт
+; monitor_speed = 115200    ; скорость для Serial.begin()
+
+; lib_deps =
+;   crankyoldgit/IRremoteESP8266
+
+
+[env:d1_mini]
+platform = espressif8266
+board = d1_mini
 framework = arduino
 
-upload_port = COM7        ; замени на свой порт (Linux: /dev/ttyUSB0 или /dev/ttyACM0)
-monitor_port = COM7       ; тот же порт
-monitor_speed = 115200    ; скорость для Serial.begin()
+upload_port = COM7       ; замени на свой порт (Linux: /dev/ttyUSB0)
+monitor_port = COM7
+monitor_speed = 115200
 
 lib_deps =
   crankyoldgit/IRremoteESP8266
